tests/ui/rfcs/rfc-2632-const-trait-impl/trait-where-clause-const.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/trait-where-clause-const.rs:7:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the trait bound `T: ~const Bar` is not satisfied
  --> $DIR/trait-where-clause-const.rs:21:5
   |
LL |     T::b();
   |     ^ the trait `~const Bar` is not implemented for `T`
   |
note: required by a bound in `Foo::b`
  --> $DIR/trait-where-clause-const.rs:15:24
   |
LL |     fn b() where Self: ~const Bar;
   |                        ^^^^^^^^^^ required by this bound in `Foo::b`
help: consider further restricting this bound
   |
LL | const fn test1<T: ~const Foo + Bar + ~const Bar>() {
   |                                    ++++++++++++

error[E0277]: the trait bound `T: ~const Bar` is not satisfied
  --> $DIR/trait-where-clause-const.rs:23:12
   |
LL |     T::c::<T>();
   |            ^ the trait `~const Bar` is not implemented for `T`
   |
note: required by a bound in `Foo::c`
  --> $DIR/trait-where-clause-const.rs:16:13
   |
LL |     fn c<T: ~const Bar>();
   |             ^^^^^^^^^^ required by this bound in `Foo::c`
help: consider further restricting this bound
   |
LL | const fn test1<T: ~const Foo + Bar + ~const Bar>() {
   |                                    ++++++++++++

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
